<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handleClick"
            type="com.squareboat.util.HandleClick" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dividerGL"
            app:layout_constraintGuide_percent=".65"
            android:orientation="horizontal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginSBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_un_selected_bt"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textAllCaps="false"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:onClick="@{(View)->handleClick.onClickHandle(View)}"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signUpBT"
             app:layout_constraintTop_toBottomOf="@id/dividerGL"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_selected_bt"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:onClick="@{(View)->handleClick.onClickHandle(View)}"
            android:textColor="@color/white"
            app:layout_constraintVertical_chainStyle="packed"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/loginSBT"
            app:layout_constraintBottom_toTopOf="@id/termConditionsTV"
            app:layout_constraintStart_toStartOf="@id/loginSBT"
            app:layout_constraintTop_toBottomOf="@id/loginSBT" />






        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_you_are_agree_to_our_terms_of_use_amp_privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            android:id="@+id/termConditionsTV"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            app:layout_constraintVertical_chainStyle="packed"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/loginSBT"
            app:layout_constraintTop_toBottomOf="@id/signUpBT"
            app:layout_constraintStart_toStartOf="@id/loginSBT" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>