<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.squareboat.viewmodel.ChangePasswordViewModel" />

        <variable
            name="handleClick"
            type="com.squareboat.util.HandleClick" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_25sdp"
            android:id="@+id/forgotIconIV"
            android:src="@drawable/ic_forgot_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:padding="@dimen/_15sdp"
            android:id="@+id/backIV"
            android:onClick="@{(View)->handleClick.onClickHandle(View)}"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@id/forgotIconIV"
            app:layout_constraintTop_toTopOf="@id/forgotIconIV"
            />




        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:textSize="@dimen/_18ssp"
            android:id="@+id/forgotPasswordTV"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_14sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/forgotIconIV"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_bold"/>



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_edit_text_bottom"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:text="@={viewModel.changePasswordData.password}"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            bind:getPassError="@{@string/password}"
            app:layout_constraintEnd_toEndOf="@id/forgotPasswordTV"
            app:layout_constraintStart_toStartOf="@id/forgotPasswordTV"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordTV" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_edit_text_bottom"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/confirm_password"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:text="@={viewModel.changePasswordData.confirmPassword}"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            bind:getPassError="@{@string/plz_enter_confirm_password}"
            app:layout_constraintEnd_toEndOf="@id/passwordET"
            app:layout_constraintStart_toStartOf="@id/passwordET"
            app:layout_constraintTop_toBottomOf="@id/passwordET" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setNewPassBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_selected_bt"
            android:fontFamily="@font/montserrat_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/set_new_password"
            android:onClick="@{(View)->handleClick.onClickHandle(View)}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/confirmPasswordET"
            app:layout_constraintStart_toStartOf="@id/confirmPasswordET"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordET" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>